traces/bug_363.txt
src/medit/inout_morice.c:1114: error: DEAD_STORE
  The value written to &k (type int) is never used.
Showing all 1 steps of the trace


src/medit/inout_morice.c:1114:7: Write of unused value
1112.         assert(mesh->extra->te);
1113.   
1114.         k=1;
              ^
1115.         getline_popen_firstelemnoref(natureread, 3, tvatn);
1116.         nt=tvatn[0];
